--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -500,7 +500,7 @@ let fourth = 132;
     const card = document.querySelector(".container");
     const xAxis = event.beta;
     const yAxis = event.gamma;
-    card.style.transform = `rotateY(${xAxis / 2}deg) rotatex(${yAxis / 2}deg)`;
+    card.style.transform = `rotateY(${yAxis / 2}deg) rotatex(${xAxis / 2}deg)`;
 
     // Do stuff with the new orientation data
     // console.log(`alpha:${alpha}\nbeta:${beta}\ngamma:${gamma}`);
