Update ContactForm styling and textarea height

--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -29,7 +29,6 @@
       <textarea
         id="message"
         name="message"
-        rows="12"
         placeholder="Hey,
         I have a few questions about [specific topic / project / etc].
         
@@ -123,6 +122,7 @@ Could we set up a time to chat / discuss this further?"
   input,
   textarea {
     margin-top: 0.3rem;
+    font-size: 1rem;
   }
   *::placeholder {
     font-family: "Montserrat", sans-serif;
@@ -161,7 +161,7 @@ Could we set up a time to chat / discuss this further?"
   }
 
   textarea {
-    height: 100%;
+    height: 12em;
     max-width: 90%;
   }
 
