Remove height property for textarea in ContactForm component

--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -170,7 +170,7 @@ Could we set up a time to chat / discuss this further?"
       max-width: 450px;
     }
     textarea {
-      height: 14em;
+      /* height: 14em; */
     }
   }
 </style>
