Update image titles and alt text in portfolio page

--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -52,14 +52,14 @@ let pd = "50px";
     <div class="sticky_window">
       <img
         class="sticky_content"
-        title="1"
-        alt="fruit"
+        title="AutoMeal (random 'fruit' image)"
+        alt="fruit (random image)"
                 src="https://source.unsplash.com/random/400×400/?fruit"
       />
       <img
         class="sticky_content"
-        title="2"
-        alt="AI"
+        title="Sumaryze That! (random 'AI' image)"
+        alt="AI (random image)"
         src="https://source.unsplash.com/random/400×400/?ai"
       />
               <!-- <iframe
@@ -69,14 +69,14 @@ let pd = "50px";
                 frameborder="0"></iframe> -->
               <img
         class="sticky_content"
-        title="3"
-        alt="spaceship"
+        title="OGalaga (random 'spaceship' image)"
+        alt="spaceship (random image)"
                 src="https://source.unsplash.com/random/400×400/?spaceship"
               />
               <img
         class="sticky_content"
-        title="4"
-        alt="yahtzee dice"
+        title="Yahtzee (random 'yahtzee dice' image)"
+        alt="yahtzee dice (random image)"
                 src="https://source.unsplash.com/random/400×400/?yahtzee%20dice"
               />
     </div>
