changing project description

--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -28,7 +28,7 @@ let pd = "50px";
             label="02"
             title_line_1="Sumaryze"
             title_line_2="That!"
-            description="Leveraging OpenAI to summarize video transcripts with ease."
+        description="Leveraging OpenAI to summarize YouTube videos with ease."
             link="http://sumaryzethat.danielsegarra.dev/"
             button_text="try now"
           />
