changing placeholder text

--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -10,7 +10,7 @@
         type="text"
         id="name"
         name="name"
-        placeholder="Janenonymous Doe"
+        placeholder="Janenonymous Dough"
         required
       />
     </label>
@@ -20,7 +20,7 @@
         id="email"
         type="email"
         name="email"
-        placeholder="respondToMe@email.com"
+        placeholder="respondToThis@email.com"
         required
       />
     </label>
