changing placeholder textarea size

--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -161,6 +161,7 @@ Could we set up a time to chat / discuss this further?"
   }
 
   textarea {
+    min-height: 12em;
     height: 12em;
     max-width: 90%;
   }
