--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -57,6 +57,9 @@
   .socials {
     width: fit-content;
   }
+  .socials a {
+    display: inline-block;
+  }
   .socials svg {
     height: 28px;
     margin: 1rem;
