changed under construction subtext

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,13 +8,8 @@ import Workers from "../components/Workers.astro";
   <main>
     <section class="bio">
       <h2 style="font-size: 3.5rem;">Under Construction</h2>
-      <p>My name is Daniel and I am a software engineer and educator.</p>
-      <p>
-        I've spent the last three years teaching introductory web development
-        skills, through non-profit development courses, in traditional and
-        non-traditional tech environments, to promote interdisciplinary
-        solutions while strengthening existing and complimentary skills.
-      </p>
+      <p>Pardon...<br/>we working some things out here.....</p>
+      <p>Feel free to look around though!</p>
     </section>
     <Workers />
   </main>
