--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -497,7 +497,8 @@ let fourth = 132;
   /* The switch - the box around the slider */
   .switch {
     position: relative;
-    display: inline-block;
+    /* display: inline-block; */
+    display: none;
     width: 60px;
     height: 34px;
     position: absolute;
