adding a randomly selected message to footer (1 joke, 1 link to how it was built, a la 'built with squarespace')

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,3 +1,7 @@
+---
+import FooterStamp from "./FooterStamp.astro";
+---
+
 <footer>
   <!-- <div>&copy;2021 Daniel Segarra Corps.</div> -->
   <!-- <div>contact</div>
@@ -43,11 +47,13 @@
       ><i class="fa-solid fa-cat"></i></a
     >
   </div>
+  <FooterStamp />
 </footer>
 
 <style>
   footer {
     display: flex;
+    flex-direction: column;
     text-align: center;
     align-items: center;
     justify-content: center;
