content size typo

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -566,7 +566,7 @@ let fourth = 132;
   window.addEventListener("load", () => {
 
     // make content full height - header height - footer height
-    const headerHeight = document.querySelector("header").offsetHeight;
+    const headerHeight = document.querySelector("nav").offsetHeight;
     const footerHeight = document.querySelector("footer").offsetHeight;
     // make content full height - header height - footer height
     const content = document.querySelector("#scroll-wrapper");
