--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,6 @@
 ---
 import FooterStamp from "./FooterStamp.astro";
+import FooterSocials from "./FooterSocials.astro";
 ---
 
 <footer>
@@ -7,46 +8,7 @@ import FooterStamp from "./FooterStamp.astro";
   <!-- <div>contact</div>
       <div>menu option</div>
       <div>donate</div> -->
-  <div class="socials">
-    <a href="https://www.linkedin.com/in/danielsegarra36/"
-      ><i class="fa-brands fa-linkedin-in"></i></a
-    >
-    <a href="https://www.github.com/danielsegarra36/"
-      ><i class="fa-brands fa-github"></i></a
-    >
-    <a href="https://www.dribbble.com/DanielSegarra36"
-      ><i class="fa-brands fa-dribbble"></i></a
-    >
-    <a href="https://www.behance.net/danielsegarra36"
-      ><i class="fa-brands fa-behance"></i></a
-    >
-    <a href="https://www.figma.com/@danielsegarra36"
-      ><i class="fa-brands fa-figma"></i></a
-    >
-    <a href="https://www.codepen.io/daniesegarra36/"
-      ><i class="fa-brands fa-codepen"></i></a
-    >
-    <a href="https://www.medium.com/@danielsegarra36"
-      ><i class="fa-brands fa-medium"></i></a
-    >
-    <a href="https://replit.com/@DanielSegarra36"
-      ><svg viewBox="3 3 27 27" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <defs></defs>
-        <path
-          d="M7 5.5C7 4.67157 7.67157 4 8.5 4H15.5C16.3284 4 17 4.67157 17 5.5V12H8.5C7.67157 12 7 11.3284 7 10.5V5.5Z"
-          fill="#F26207"></path>
-        <path
-          d="M17 12H25.5C26.3284 12 27 12.6716 27 13.5V18.5C27 19.3284 26.3284 20 25.5 20H17V12Z"
-          fill="#F26207"></path>
-        <path
-          d="M7 21.5C7 20.6716 7.67157 20 8.5 20H17V26.5C17 27.3284 16.3284 28 15.5 28H8.5C7.67157 28 7 27.3284 7 26.5V21.5Z"
-          fill="#F26207"></path>
-      </svg></a
-    >
-    <a href="https://ko-fi.com/danielsegarra36"
-      ><i class="fa-solid fa-cat"></i></a
-    >
-  </div>
+  <FooterSocials />
   <FooterStamp />
 </footer>
 
@@ -58,31 +20,5 @@ import FooterStamp from "./FooterStamp.astro";
     align-items: center;
     justify-content: center;
     padding: 1rem 2rem 0;
-  }
-
-  .socials {
-    width: fit-content;
-  }
-  .socials a {
-    display: inline-block;
-  }
-  .socials svg {
-    height: 28px;
-    margin: 1rem;
-    color: white; /* the font-awesome icons will inherit this color (astro)*/
-    opacity: 0.7;
-  }
-  .socials path {
-    fill: white;
-  }
-  .socials svg:hover {
-    opacity: 1;
-  }
-
-  @media screen and (max-width: 356px) {
-    .socials svg,
-    .socials i {
-      margin: 0.5rem 1rem;
-    }
   }
 </style>
