--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -358,7 +358,7 @@ let fourth = 132;
   }
 
   .scroll-item {
-    min-/* height: calc(100vh - 200px); */
+    /* min-height: calc(100vh - 200px); */
     scroll-snap-align: start;
   }
 
