singlepagelayout is broken atm due to some CSS Grid issues. will look into it later. the other layout works just fine in the moment

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,13 +1,13 @@
 ---
-import SinglePageLayout from "../layouts/SinglePageLayout.astro";
+import MainLayout from "../layouts/MainLayout.astro";
 import ContactForm from "../components/ContactForm.astro";
 ---
 
-<SinglePageLayout title="Contact">
+<MainLayout title="Contact">
   <div id="contact-form">
     <ContactForm />
   </div>
-</SinglePageLayout>
+</MainLayout>
 
 <style>
   #contact-form {
