--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,10 @@
 ---
-import SinglePageLayout from "../layouts/SinglePageLayout.astro";
+import MainLayout from "../layouts/MainLayout.astro";
 import Card from "../components/Card.astro";
 import Workers from "../components/Workers.astro";
 ---
 
-<SinglePageLayout title="Daniel Segarra: We Workin Here.">
+<MainLayout title="Daniel Segarra: We Workin Here.">
   <main>
     <section class="bio">
       <h2 style="font-size: 3.5rem;">Under Construction</h2>
@@ -13,7 +13,7 @@ import Workers from "../components/Workers.astro";
     </section>
     <Workers />
   </main>
-</SinglePageLayout>
+</MainLayout>
 
 <style>
   main {
