--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -278,8 +278,12 @@ let fourth = 132;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 1.5rem;
+    /* gap: 1.5rem; */
     height: 100%;
+    width: 100%;
+  }
+  .first-slide-container p {
+    width: 80%;
   }
 
   .first-slide h2 {
@@ -289,7 +293,7 @@ let fourth = 132;
 
   .first-slide p {
     max-width: 980px;
-    margin-bottom: 1.5rem;
+    /* margin-bottom: 1.5rem; */
     text-align: center;
   }
   /* Common styles for .two-col and .bio */
@@ -308,7 +312,8 @@ let fourth = 132;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    /* width: 100%; */
+    width: 60%;
   }
 
   .two-col {
@@ -320,17 +325,20 @@ let fourth = 132;
   #bio-intro-container {
     justify-content: center;
     height: auto;
+    /* height: 100%; */
+    min-height: 60%;
   }
 
   .bio {
     margin: 0 auto;
     font-size: clamp(1rem, 0.7661rem + 1.4679vw, 1.5rem);
+    width: 100%;
   }
 
-  .bio svg {
+  /* .bio svg {
     height: 60%;
     width: 45%;
-  }
+  } */
 
   #scroll-container {
     height: calc(100vh - 200px);
@@ -363,10 +371,15 @@ let fourth = 132;
     /* min-height: calc(100vh - 200px); */
     scroll-snap-align: start;
   }
+  
+  #scroll-wrapper > #scroll-container > .scroll-item:not(:first-of-type) {
+    opacity: 0;
+  }
 
   #brooklyn-map,
   #cuenca-map {
     width: 100%;
+    height: 60%;
   }
 
   @media screen and (max-width: 606px) {
@@ -426,7 +439,7 @@ let fourth = 132;
 
   @media screen and (min-width: 800px) {
     .first-slide-container {
-      gap: 3rem;
+      /* gap: 3rem; */
     }
     #bio-intro-container {
       display: flex;
@@ -452,14 +465,20 @@ let fourth = 132;
     }
     .svgMe {
       /* height: 300px !important; */
-      max-height: 250px !important;
+      /* max-height: 250px !important; */
     }
   }
 
   .svgMe {
-    max-height: 350px;
-    max-width: 100%;
-    height: fit-content;
+    /* max-height: 350px; */
+    /* max-width: 100%; */
+    /* height: fit-content; */
+    height: 100%;
+    width: 100%;
+    /* max-width: 100%; */
+    /* height: fit-content; */
+    /* height: 100%; */
+    height: inherit;
   }
 
   h2 {
