--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -42,6 +42,12 @@ import Footer from "../components/Footer.astro";
       padding: 0;
       box-sizing: border-box;
     }
+
+    html {
+      display: flex;
+      align-items: center;
+      height: 100%;
+    }
     body,
     html {
       background-color: black;
@@ -55,6 +61,11 @@ import Footer from "../components/Footer.astro";
       /* grid-template-rows: auto 1fr auto; */
       /* needed to take up full page height */
       /* margin: 0 8px; */
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      height: 100%;
     }
     body,
     html {
