--- a/src/components/FooterSocials.astro
+++ b/src/components/FooterSocials.astro
@@ -43,8 +43,8 @@
     display: none;
   }
 
-    .socials {
-      position: relative;
+  .socials {
+    position: relative;
     width: fit-content;
     display: flex;
     /* overflow: scroll; */
@@ -56,19 +56,20 @@
     overflow-y: hidden;
     scrollbar-width: none;
     justify-content: center;
+    -webkit-overflow-scrolling: touch; /* Enable smooth scrolling on iOS */
   }
-  @media (overflow-block: scroll) {
+  /* @media (overflow-block: scroll) {
     .socials {
-      justify-content: start;
       position: relative;
     }
-  }
+  } */
   .socials a {
     display: inline-block;
+    margin: 0.5rem 1rem;
   }
   .socials svg {
     height: 28px;
-    margin: 1rem;
+    /* margin: 1rem; */
     color: white; /* the font-awesome icons will inherit this color (astro)*/
     opacity: 0.7;
   }
@@ -82,7 +83,84 @@
   @media screen and (max-width: 356px) {
     .socials svg,
     .socials i {
-      margin: 0.5rem 1rem;
+      /* margin: 0.5rem 1rem; */
+    }
+  }
+  
+  @media screen and (max-width: 605px) {
+    .socials {
+      justify-content: start;
+    }
+    .socials-animation {
+      justify-content: start;
+      animation: socials-animation 8s linear forwards;
+    }
+  }
+
+  @keyframes socials-animation {
+    0% {
+      transform: translateX(0);
+    }
+    50% {
+      /* transform: translateX(-230px); Adjust the percentage based on the number of icons */
+      transform: translateX(calc(100% - 100vw)); 
+    }
+    100% {
+      transform: translateX(0);
     }
   }
   </style>
+
+  <script>
+    const socials = document.querySelector(".socials");
+    // const socialsScroll = () => {
+    //   socials.scrollBy(1, 0);
+    // };
+    // setInterval(socialsScroll, 10);
+
+    // if socials is visible on screen, start animation
+    const socialsObserver = new IntersectionObserver((entries) => {
+      entries.forEach((entry) => {
+        if (entry.isIntersecting) {
+          // const socials = document.querySelector(".socials");
+          const socials = document.querySelectorAll(".socials > a");
+
+          socials.forEach((social) => {
+            social.classList.add("socials-animation");
+          });
+
+          // // toggle animation
+          // socials.classList.toggle("socials-animation");
+          
+          // if scroll detected stop animation
+          // socials.addEventListener("scroll", () => {
+          //   socials.classList.toggle("socials-animation");
+          // });
+        }
+      });
+    });
+
+    socialsObserver.observe(document.querySelector(".socials"));
+
+    // if scroll detected stop animation
+    socials.addEventListener("scroll", () => {
+      // clearInterval(socialsScroll);
+
+      // if animation is running, stop it
+      const socials = document.querySelectorAll(".socials > a");
+      const style = window.getComputedStyle(document.querySelector(".socials"));
+      const animationPlayState = style.getPropertyValue("animation-play-state");
+
+      socials.forEach((social) => {
+        // check play state
+
+        if (animationPlayState === "running") {
+          // remove class
+          social.classList.remove("socials-animation");
+          
+          // set translateX(0);
+          // social.style.transform = "translateX(0)";
+        }
+      });
+    });
+  </script>
