--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -585,23 +585,27 @@ let fourth = 132;
 <script define:vars={{ firstColor, secondColor, thirdColor, fourth }}>
   // on load
   window.addEventListener("load", () => {
-
     // make content full height - header height - footer height
     const headerHeight = document.querySelector("nav").offsetHeight;
     const footerHeight = document.querySelector("footer").offsetHeight;
-    const scrollControlsHeight = document.querySelector("#scroll-controls").offsetHeight;
+    const scrollControlsHeight =
+      document.querySelector("#scroll-controls").offsetHeight;
     // make content full height - header height - footer height
     const content = document.querySelector("#scroll-wrapper");
     content.style.height = `calc(100vh - ${headerHeight + footerHeight}px)`;
 
     // make scroll container full height - header height - footer height
     const scrollContainer = document.querySelector("#scroll-container");
-    scrollContainer.style.height = `calc(100vh - ${headerHeight + footerHeight + scrollControlsHeight}px)`;
+    scrollContainer.style.height = `calc(100vh - ${
+      headerHeight + footerHeight + scrollControlsHeight
+    }px)`;
 
     // make scroll item full height - header height - footer height
     const scrollItems = document.querySelectorAll(".scroll-item");
     scrollItems.forEach((item, index) => {
-      item.style.height = `calc(100vh - ${headerHeight + footerHeight + scrollControlsHeight}px)`;
+      item.style.height = `calc(100vh - ${
+        headerHeight + footerHeight + scrollControlsHeight
+      }px)`;
       if (index < scrollItems.length - 1)
         document
           .querySelector("#scroll-index")
@@ -611,7 +615,6 @@ let fourth = 132;
     // make scroll index bottom - footer height
     // const scrollIndex = document.querySelector("#scroll-index");
     // scrollIndex.style.bottom = `${footerHeight + 20}px`;
-
 
     // make scroll arrow bottom - footer height
     // const scrollArrow = document.querySelector("#scroll-arrow");
@@ -623,17 +626,21 @@ let fourth = 132;
     // }
     let initCircle = document.querySelector(
       `#scroll-index > svg:nth-of-type(${1}) > circle`
-    )
+    );
     let initSVG = document.querySelector(
       `#scroll-index > svg:nth-of-type(${1})`
-    )
+    );
     initCircle.style.fill = "burlywood";
     initCircle.style.stroke = "#fdf6ed";
     initCircle.style.strokeWidth = "1px";
     initSVG.style.transform = "scale(1.2)";
-    document.querySelectorAll('#scroll-wrapper > #scroll-container > .scroll-item:not(:first-of-type)').forEach((item) => {
+    document
+      .querySelectorAll(
+        "#scroll-wrapper > #scroll-container > .scroll-item:not(:first-of-type)"
+      )
+      .forEach((item) => {
       item.style.opacity = 1;
-    })
+      });
   });
 
   // Movement Animation to happen
