fixes for ts warnings: possible null values

--- a/src/components/FooterBuildLinks.astro
+++ b/src/components/FooterBuildLinks.astro
@@ -87,7 +87,7 @@
 
 <script>
   const buildLink = document.getElementById("build-links-container");
-  const buildLinkChildren = buildLink.children;
+  const buildLinkChildren = buildLink!.children;
   const randomBuildLinkIndex = Math.floor(
     Math.random() * buildLinkChildren.length
   );
