--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,43 +1,61 @@
-<nav>
-  <div class="nav-link-container">
-    <a class="nav-link" href="/">home</a>
-    <a class="nav-link" href="/work">work</a>
-  </div>
-  <!-- <div id="logo"><img src="./logo.png" alt="LOGO" /></div> -->
-  <a class="nav-logo" href="/">
-    <!-- <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-      <lottie-player src="animation.json" background="transparent" speed=".25" loop autoplay></lottie-player> -->
-    <svg
-      id="logo"
-      viewBox="0 0 20 24"
-      fill="none"
-      xmlns="http://www.w3.org/2000/svg"
-    >
-      <path
-        id="animatedCurve"
-        d="M8.63739 6.82584C8.75689 6.96242 5.75148 8.2885 5.24641 8.59154C3.91277 9.39173 2.75596 10.9866 3.66128 12.5644C4.32114 13.7144 7.70668 14.0178 7.11244 15.5741C6.24829 17.8374 3.49523 18.853 2.21662 20.7709C0.752343 22.9674 7.17285 22.0847 7.67427 21.9548C12.4181 20.7259 15.1959 17.9769 17.165 13.5074C18.8138 9.76478 19.7179 4.05454 14.7572 2.53195C11.8844 1.65021 9.0265 2.13065 6.1092 2.13065"
-        stroke="white"
-        stroke-width="3"
-        stroke-linecap="round"></path>
-    </svg>
-  </a>
-  <div class="nav-link-container">
-    <a class="nav-link" href="/about">about</a>
-    <a class="nav-link" href="/contact">contact</a>
-  </div>
-  <!-- <div>blog</div> -->
-</nav>
+---
+import Marquee from "./Marquee.astro";
+interface Props {
+  marquee?: boolean;
+}
 
-<style>
+const { marquee = false } = Astro.props;
+
+let navPadding = marquee ? "0 0 1.2rem 0;" : "1.2rem 0;";
+---
+
+<header>
+  {marquee ? <Marquee /> : <div />}
+  <nav>
+    <div class="nav-link-container">
+      <a class="nav-link" href="/">home</a>
+      <a class="nav-link" href="/work">work</a>
+    </div>
+    <!-- <div id="logo"><img src="./logo.png" alt="LOGO" /></div> -->
+    <a class="nav-logo" href="/">
+      <!-- <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+        <lottie-player src="animation.json" background="transparent" speed=".25" loop autoplay></lottie-player> -->
+      <svg
+        id="logo"
+        viewBox="0 0 20 24"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          id="animatedCurve"
+          d="M8.63739 6.82584C8.75689 6.96242 5.75148 8.2885 5.24641 8.59154C3.91277 9.39173 2.75596 10.9866 3.66128 12.5644C4.32114 13.7144 7.70668 14.0178 7.11244 15.5741C6.24829 17.8374 3.49523 18.853 2.21662 20.7709C0.752343 22.9674 7.17285 22.0847 7.67427 21.9548C12.4181 20.7259 15.1959 17.9769 17.165 13.5074C18.8138 9.76478 19.7179 4.05454 14.7572 2.53195C11.8844 1.65021 9.0265 2.13065 6.1092 2.13065"
+          stroke="white"
+          stroke-width="3"
+          stroke-linecap="round"></path>
+      </svg>
+    </a>
+    <div class="nav-link-container">
+      <a class="nav-link" href="/about">about</a>
+      <a class="nav-link" href="/contact">contact</a>
+    </div>
+    <!-- <div>blog</div> -->
+  </nav>
+</header>
+
+<style define:vars={{ navPadding }}>
   nav,
   footer {
     display: flex;
     /* text-align: center; */
     align-items: center;
     justify-content: center;
-    padding: 1.2rem 0;
+    padding: var(--navPadding);
   }
 
+  header {
+    /* position: sticky;
+    top: -1.3em; */
+  }
   nav {
     justify-content: space-around;
   }
