removing scrollbar on slide container

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -232,7 +232,7 @@ let fourth = 132;
 </MainLayout>
 
 <style define:vars={{ firstColor, secondColor, thirdColor, fourth }}>
-  *::-webkit-scrollbar {
+  #scroll-wrapper > *::-webkit-scrollbar {
     display: none;
   }
 
