--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -190,6 +190,20 @@ let pd = "50px";
   document.addEventListener("DOMContentLoaded", function () {
     "use strict";
 
+    gsap.from(".sticky_window", {
+      clipPath: function () {
+        return "inset(0px 0px 0px 150%)";
+      },
+      stagger: 0.5,
+      ease: "none",
+    });
+    // fade in scroll window
+    gsap.from(".scroll_window", {
+      opacity: 0,
+      duration: 1,
+      ease: "ease-in",
+    });
+
     gsap.registerPlugin(ScrollTrigger);
 
     // lenis smooth scroll
